--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "chatRoom",
+  "name": "nodeserver",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "This is nodeserver for our WebChat app",
+  "main": "index.js",
   "scripts": {
-    "start": "node server",
-    "dev": "nodemon server"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "CHIRANJEE",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "moment": "^2.29.1",
-    "nodemon": "^2.0.12",
-    "socket.io": "^4.1.3"
+    "socket.io": "^4.5.2"
   }
 }
