--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "nodeserver",
+  "name": "chatRoom",
   "version": "1.0.0",
-  "description": "This is nodeserver for our WebChat app",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "dev": "nodemon server"
   },
-  "author": "CHIRANJEE",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "socket.io": "^4.5.2"
+    "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "nodemon": "^2.0.12",
+    "socket.io": "^4.1.3"
   }
 }
